<resources>
    <string name="app_name">WildExplorer\'s Companion</string>
    <string name="wes_c">Wes\'c</string>
    <string name="selamat_datang_kembali">Selamat Datang Kembali!</string>
    <string name="silakan_login_dengan_akun_mu">Silakan Login dengan akun mu</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="belum_punya_akun_daftar_sekarang">Belum punya akun?Daftar Sekarang!</string>
    <string name="title_register">Isi Form Dibawah Ini Untuk Memulai Perjalananmu</string>
    <string name="greeting_text">Selamat Datang!</string>
    <string name="name">Nama</string>
    <string name="register">Register</string>
    <string name="register_to_login_text">Sudah punya akun?Masuk Disini</string>
    <string name="survival_guide">Panduan Bertahan Hidup</string>
    <string name="first_aid_guide">Panduan Pertolongan Pertama</string>
    <string name="plant_identify">Identifikasi Tanaman</string>
    <string name="password_not_valid">Password at least 8 characters</string>
    <string name="register_info">Akun Berhasil Dibuat!</string>
    <string name="close">Close</string>
    <string name="error_found">Your account Not Found</string>
    <string name="not_fill">Must Be Fill</string>
    <string name="not_valid_email"> Email Not Valid</string>
    <string name="change_password">Ganti Password</string>
    <string name="profile">Profile</string>
    <string name="alertdialog_quote">Selamat! Silakan tekan tombol login unutk memulai perjalanan</string>
    <string name="detail_plant">Detail Plant</string>
</resources>