<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_panel"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/background_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_home_great"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/roboto_bold"
            android:text="Halo, Selamat Datang!"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/top_panel"
            app:layout_constraintStart_toStartOf="@+id/top_panel"
            app:layout_constraintTop_toTopOf="@+id/top_panel" />

        <TextView
            android:id="@+id/tv_home_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:fontFamily="@font/roboto_bold"
            android:hint="Dewantara"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/top_panel"
            app:layout_constraintTop_toBottomOf="@+id/tv_home_great" />

        <ImageView
            android:id="@+id/iv_home_image"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginEnd="24dp"
            android:src="@drawable/ic_profile"
            app:layout_constraintBottom_toBottomOf="@+id/tv_home_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_home_great" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/layout_survival"
        android:layout_width="260dp"
        android:layout_height="90dp"
        android:background="@drawable/item_home_background"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_panel">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_book"
            android:layout_marginStart="20dp"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:text="@string/survival_guide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:textColor="#EBF5EC"
            android:textSize="13sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="12dp"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_first_aid"
        android:layout_width="260dp"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/item_home_background"
        android:orientation="horizontal"

        app:layout_constraintEnd_toEndOf="@+id/layout_survival"
        app:layout_constraintTop_toBottomOf="@+id/layout_survival">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_book_medical" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/first_aid_guide"
            android:layout_gravity="center_vertical"
            android:textColor="#EBF5EC"
            android:textAlignment="center"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="20dp"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_plant"
        android:layout_width="260dp"
        android:layout_height="90dp"
        android:background="@drawable/item_home_background"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/layout_first_aid"
        app:layout_constraintTop_toBottomOf="@+id/layout_first_aid">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_camera_retro" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/plant_identify"
            android:layout_marginStart="20dp"
            android:layout_gravity="center_vertical"
            android:textColor="#EBF5EC"
            android:textAlignment="center"
            android:layout_marginEnd="12dp"
            android:textSize="13sp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_sos"
        android:background="@drawable/bg_circle"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_exclamation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>